--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,98 +1,251 @@
 # SPDX-License-Identifier: EUPL-1.2
 
-# Labeler configuration
-# Each label must have an array of file patterns it applies to
+# Shared patterns for reuse
+shared:
+  python_files: &python_files
+    - "**/*.py"
+    - "**/*.pyi"
+    - "**/*.pyx"
+    - "**/*.pxd"
+  
+  doc_files: &doc_files
+    - "docs/**/*"
+    - "**/*.md"
+    - "**/*.rst"
+    - "**/*.txt"
+    - "mkdocs.yml"
+    - "**/*.ipynb"
+  
+  config_files: &config_files
+    - "**/*.yml"
+    - "**/*.yaml"
+    - "**/*.json"
+    - "**/*.toml"
+    - "**/*.ini"
+    - ".env*"
+    - "*.config.*"
 
-"type: fix":
+# Type Labels
+"type/fix":
   - "src/**/*.py"
   - "lib/**/*.py"
   - "**/bugfix/**"
+  - "**/hotfix/**"
+  - "**/patch/**"
 
-"type: feature":
+"type/feature":
   - "src/**/*.py"
   - "lib/**/*.py"
   - "**/feature/**"
+  - "**/feat/**"
+  - "**/enhancement/**"
 
-"type: docs":
-  - "docs/**/*.md"
-  - "**/README.md"
-  - "**/CONTRIBUTING.md"
-  - "**/*.rst"
+"type/docs":
+  - *doc_files
 
-"type: test":
+"type/test":
   - "tests/**/*.py"
   - "**/test/**"
+  - "**/tests/**"
+  - "**/*_test.py"
   - "**/test_*.py"
+  - "**/testing/**"
+  - "**/*.spec.py"
 
-"type: chore":
+"type/chore":
   - "**/build/**"
   - "**/ci/**"
   - "**/config/**"
   - "**/scripts/**"
+  - ".github/**/*"
+  - ".gitignore"
+  - ".editorconfig"
+  - "LICENSE*"
+  - "NOTICE*"
 
-"type: refactor":
+"type/refactor":
   - "src/**/*.py"
   - "lib/**/*.py"
   - "**/refactor/**"
+  - "**/cleanup/**"
 
-"type: style":
+"type/style":
   - "**/*.css"
   - "**/*.scss"
   - "**/*.sass"
   - "**/*.less"
+  - "**/*.html"
+  - "**/*.jinja"
+  - "**/*.j2"
+  - ".style.yapf"
+  - ".pylintrc"
+  - "pyproject.toml"
+  - "setup.cfg"
 
-"type: performance":
+"type/performance":
   - "src/**/*.py"
   - "lib/**/*.py"
   - "**/perf/**"
+  - "**/benchmark/**"
+  - "**/optimizations/**"
 
-"type: build":
-  - "Dockerfile"
-  - "docker-compose.yml"
-  - "**/build/**"
-
-"status: work-in-progress":
+# Status Labels
+"status/work-in-progress":
   - "**/WIP/**"
+  - "**/draft/**"
 
-"status: ready-for-review":
+"status/ready-for-review":
   - "**/RFR/**"
+  - "**/ready/**"
 
+"status/blocked":
+  - "**/blocked/**"
+  - "**/hold/**"
+
+"status/needs-discussion":
+  - "**/discuss/**"
+  - "**/proposal/**"
+  - "RFC.md"
+
+# Security Labels
 "security":
   - "src/security/**/*.py"
   - "**/auth/**"
   - "**/oauth/**"
+  - "**/crypto/**"
+  - "**/password/**"
+  - "**/permission/**"
+  - "**/secret/**"
+  - "**/*security*/**"
 
+# Breaking Changes
 "breaking":
-  - "**/*.py"
-  - "docs/release-notes/**/*.md"
+  - *python_files
+  - "docs/breaking-changes/**"
+  - "docs/migrations/**"
+  - "docs/upgrades/**"
 
+# Deprecation
 "deprecation":
-  - "**/*.py"
-  - "docs/deprecations/**/*.md"
+  - *python_files
+  - "docs/deprecations/**"
 
+# CI/CD
 "ci":
-  - ".github/workflows/**/*.yml"
+  - ".github/workflows/**"
+  - ".github/actions/**"
+  - ".gitlab-ci.yml"
+  - "azure-pipelines.yml"
+  - "Jenkinsfile"
+  - ".travis.yml"
+  - ".circleci/**"
 
+# Dependencies
 "dependencies":
-  - "package.json"
-  - "package-lock.json"
+  - "requirements*.txt"
+  - "requirements/**"
   - "poetry.lock"
-  - "requirements.txt"
-  - "**/dependencies/**"
+  - "pyproject.toml"
+  - "setup.py"
+  - "setup.cfg"
+  - "Pipfile*"
+  - "conda-env.yml"
+  - ".pre-commit-config.yaml"
 
+# Infrastructure
 "infrastructure":
-  - "terraform/**/*.tf"
-  - "ansible/**/*.yml"
-  - "k8s/**/*.yaml"
+  - "terraform/**"
+  - "ansible/**"
+  - "kubernetes/**"
+  - "k8s/**"
+  - "docker/**"
+  - "Dockerfile*"
+  - "docker-compose*.yml"
+  - "helm/**"
+  - "deployment/**"
+  - "scripts/**"
 
+# Documentation
 "documentation":
-  - "docs/**/*.md"
-  - "**/README.md"
-  - "**/CONTRIBUTING.md"
-  - "**/*.rst"
+  - *doc_files
+  - "examples/**"
+  - "samples/**"
+  - "tutorials/**"
 
-"size/xs": []
-"size/s": []
-"size/m": []
-"size/l": []
-"size/xl": []
+# Testing
+"testing":
+  - "tests/**"
+  - "**/test/**"
+  - "**/tests/**"
+  - "**/*_test.py"
+  - "**/test_*.py"
+  - "pytest.ini"
+  - "conftest.py"
+  - ".coveragerc"
+
+# Database
+"database":
+  - "**/migrations/**"
+  - "**/alembic/**"
+  - "**/*model*.py"
+  - "**/*schema*.py"
+  - "**/db/**"
+
+# API
+"api":
+  - "**/api/**"
+  - "**/rest/**"
+  - "**/graphql/**"
+  - "**/endpoints/**"
+  - "**/*controller*.py"
+  - "**/*view*.py"
+
+# UI/Frontend
+"frontend":
+  - "**/templates/**"
+  - "**/static/**"
+  - "**/assets/**"
+  - "**/*.html"
+  - "**/*.css"
+  - "**/*.scss"
+  - "**/*.js"
+
+# Size Labels (handled by size-labeler action)
+"size/xs":
+  - any: ['**/*']
+"size/s":
+  - any: ['**/*']
+"size/m":
+  - any: ['**/*']
+"size/l":
+  - any: ['**/*']
+"size/xl":
+  - any: ['**/*']
+
+# Automated
+"automated":
+  - author: ["dependabot[bot]", "renovate[bot]"]
+
+# Priority
+"priority/critical":
+  - "**/hotfix/**"
+  - "**/emergency/**"
+  - "**/critical/**"
+
+"priority/high":
+  - "**/high-priority/**"
+  - "**/important/**"
+
+# Component Labels
+"component/core":
+  - "src/core/**"
+  - "lib/core/**"
+
+"component/utils":
+  - "src/utils/**"
+  - "lib/utils/**"
+
+"component/cli":
+  - "src/cli/**"
+  - "bin/**"
+  - "scripts/**"
