fix: issue with yq command

--- a/.github/workflows/labels-sync.yml
+++ b/.github/workflows/labels-sync.yml
@@ -38,10 +38,11 @@ jobs:
 
       - name: 📥 Checkout
         uses: actions/checkout@v4
-        
+
       - name: 📚 Load Workflow Settings
         id: settings
         run: |
+          yq --version
           SETTINGS=$(yq eval-all -o=json '.github/config/workflow-settings.yml')
           echo "settings=$SETTINGS" >> $GITHUB_OUTPUT
 
