--- a/.github/workflows/labels-sync.yml
+++ b/.github/workflows/labels-sync.yml
@@ -45,7 +45,7 @@ jobs:
           yq --version
           SETTINGS=$(yq eval -o=json .github/config/workflow-settings.yml)
           echo "DEBUG: SETTINGS=$SETTINGS"
-          echo "settings=$SETTINGS" >> "$GITHUB_OUTPUT"
+          echo "settings=$(echo "$SETTINGS" | jq -c .)" >> "$GITHUB_OUTPUT"
 
       - name: 🏷️ Sync Labels
         uses: EndBug/label-sync@v2
